# concurrent

./: CMakeLists.txt  README.md
.github/workflows/: ci.yaml  codeql.yaml
cmake/: concurrent-config.cmake
cmake/preset/: base.json
include/: concurrent.hpp
test/: CMakeLists.txt  test_main.cpp
